2003-12-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added meld.

2003-12-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed bse.

2003-12-07  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Added gnome-jabber.

2003-12-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added medusa.

2003-12-04  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Removed libplanner. It has been merged with
	planner.

2003-12-03  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Replaced (lib)mrproject by (lib)planner.

2003-12-03  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Corrected gnome-commander POT filename.

2003-12-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libbonoboui has been branched.

2003-12-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libbonobo has been branched.

2003-12-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed developer-app section and moved
	everything in it to extras.

2003-12-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-commander.

2003-11-28  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Moved libgnomecups/gnome-cups-manager back
	to extras, fixed branch information for rhythmbox.

2003-11-26  Ole Laursen  <olau@hardworking.dk>

	* translation-status.xml: Moved sound-juicer to Fifth Toe, gcm and
	gnomeradio to extras and deleted stickynotes_applet (since it has
	been integrated with gnome-applets).

2003-11-24  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Added libgnomecups and moved
	gnome-cups-manager to office.

2003-11-24  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Fixed double gnome-control-center I put
	here.

2003-11-24  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Added gnome-cups-manager to extras.
