@@ -959,6 +959,28 @@
       </component>
     </version>
   </module>
+  <module name="gnome-jabber">
+    <version release="gnome-2.6">
+      <component name="gnome-jabber" dir="gnome-jabber" group="extras">
+	<podir dir="po"/>
+	<potname name="gnome-jabber.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
+  <module name="gnome-keyring">
+    <version release="gnome-2.6">
+      <component name="gnome-keyring" dir="gnome-keyring" group="extras">
+	<podir dir="po"/>
+	<potname name="gnome-keyring.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="gnome-mag">
     <version release="gnome-2.4">
       <component name="gnome-mag" dir="gnome-mag" group="desktop">
@@ -973,17 +995,6 @@
       <component name="gnome-mag" dir="gnome-mag" group="desktop">
 	<podir dir="po"/>
 	<potname name="gnome-mag.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-  </module>
-  <module name="gnome-jabber">
-    <version release="gnome-2.6">
-      <component name="gnome-jabber" dir="gnome-jabber" group="extras">
-	<podir dir="po"/>
-	<potname name="gnome-jabber.pot"/>
 	<branch name="HEAD"/>
 	<regenerate/>
 	<download/>
