@@ -1,5 +1,10 @@
 2003-12-16  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Added gnome-keyring.
+	Sorted gnome-jabber correctly.
+
+2003-12-16  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Added meld.
 
 2003-12-15  Christian Rose  <menthos@menthos.com>
